# Dashboard_datos_meteorologicos_Puno

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
src/: cache.py  config.py  main.py
src/data/: auth_module.py  file_managment.py
src/template/: Planilla de datos andrea.xlsx
src/ui/: control_diario.py  control_semanal.py  generacion_planilla.py
