[project]
name = "andreas-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-mantine-components>=0.14.0",
    "dash-iconify>=0.1.2",
    "dotenv>=0.9.9",
    "msal>=1.34.0",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=5.18.0",
    "requests>=2.32.5",
]
